fix RecordWork overflow bug

--- a/src/components/MainPage/GeneralPage/WorkManagement/RecordWork/RecordWork.scss
+++ b/src/components/MainPage/GeneralPage/WorkManagement/RecordWork/RecordWork.scss
@@ -28,10 +28,12 @@
       align-self: start;
       transition: 200ms ease-in-out;
       min-height: 100%;
+      min-height: calc(100vh - 200px);
 
       .main-form__wrapper-item {
         width: calc(100% / var(--page-items) - 45px);
         margin-right: 45px;
+        min-height: calc(100vh - 200px);
         height: fit-content;
 
         .select__options {
